# y4t2-time-series-project

./: .gitignore  README.md  pyproject.toml
docs/: 1.md  2.md  indexes_df.md  macro_df.md  transform.md
notebooks/: FX_BOT_Pipeline.ipynb
src/: app.py  data_processor.py  main.py  training.py  transform.py
src/local_data/: indexes_df.parquet  macro_df.parquet  tickers_df.parquet  xgboost_model_1h.joblib  xgboost_model_4h.joblib
